# template

./: .gitmodules  CMakeLists.txt  README.md
.github/: build.yml
.github/workflows/: build.yml
dependencies/: CMakeLists.txt
